[workspace]
members = [
    "trace-context-level3",
    "trace-context-level3-axum",
    "trace-context-level3-http",
    "trace-context-level3-tower",
]
resolver = "3"


[workspace.package]
version = "0.0.0"
edition = "2024"
repository = "https://github.com/imp/trace-context-level3-rs"
license = "MIT OR Apache-2.0"
keywords = ["trace", "context"]
readme = "README.md"


[workspace.dependencies]
axum = { version = "0.8", default-features = false }
axum-core = "0.5"
http = "1.4"
pin-project = "1"
rand = "0.9"
thiserror = "2.0"
tokio = { version = "1", default-features = false }
tower = { version = "0.5", default-features = false }

trace-context-level3 = { path = "trace-context-level3" }
trace-context-level3-http = { path = "trace-context-level3-http" }


[workspace.lints.clippy]
cast_possible_truncation = "warn"
large_futures = "warn"
manual_let_else = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
needless_pass_by_value = "warn"
redundant_type_annotations = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
unused_async = "warn"
use_self = "warn"


[workspace.lints.rust]
unsafe_code = "deny"
deprecated_in_future = "warn"
future_incompatible = { level = "warn", priority = -1 }
# unreachable_pub = "warn"
missing_debug_implementations = "warn"
# non_exhaustive_omitted_patterns = "warn"
noop_method_call = "warn"
rust_2018_compatibility = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused = { level = "warn", priority = -1 }
# unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# warnings = "deny"
