[package]
name = "trace-context-level3-axum"
description = "W3C Trace Context Level 3 — axum extractor for TraceContext"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true


[dependencies]
axum-core.workspace = true
http.workspace = true
trace-context-level3 = { workspace = true, features = ["rand"] }
trace-context-level3-http.workspace = true


[dev-dependencies]
axum = { workspace = true, features = ["http1", "tokio"] }
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tower = { workspace = true, features = ["util"] }
trace-context-level3-http.workspace = true
trace-context-level3-tower.workspace = true


[lints]
workspace = true
