[package]
name = "trace-context-level3-http"
description = "W3C Trace Context Level 3 — HTTP header extraction and injection via the http crate"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true


[dependencies]
trace-context-level3.workspace = true
http.workspace = true


[lints]
workspace = true
