[package]
name = "trace-context-level3-http"
description = "W3C Trace Context Level 3 — HTTP header extraction and injection via the http crate"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true


[features]
serde = ["dep:serde", "trace-context-level3/serde"]


[dependencies]
http.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
trace-context-level3.workspace = true


[dev-dependencies]
serde_json = { workspace = true }


[lints]
workspace = true
