[package]
name = "trace-context-level3-tower"
description = "W3C Trace Context Level 3 — tower middleware storing context in request extensions"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true


[features]
task-local = ["dep:tokio"]


[dependencies]
trace-context-level3 = { workspace = true, features = ["rand"] }
trace-context-level3-http.workspace = true
http.workspace = true
pin-project.workspace = true
tokio = { workspace = true, features = ["rt"], optional = true }
tower = { workspace = true, default-features = false }


[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }


[lints]
workspace = true
