[package]
name = "trace-context-level3"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true


[features]
rand = ["dep:rand"]


[dependencies]
thiserror.workspace = true
rand = { workspace = true, optional = true }


[lints]
workspace = true
