[package]
name = "trace-context-level3"
description = "W3C Trace Context Level 3 — core types, parsing, and serialization of traceparent and tracestate"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true


[features]
rand = ["dep:rand"]
serde = ["dep:serde_core"]


[dependencies]
rand = { workspace = true, optional = true }
serde_core = { workspace = true, optional = true }
thiserror.workspace = true


[dev-dependencies]
serde_json = { workspace = true }


[lints]
workspace = true
